SalesforceProject2/src/objects/Dmitriy_test__c.object
<CustomObject>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>help-help-help</description>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_location__c</fullName>
        <label>diz_location__c</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <label>diz_number__c</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_percent__c</fullName>
        <label>diz_percent__c</label>
        <precision>13</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <label>Dmitriy_test</label>
    <nameField>
        <label>Dmitriy_test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dmitriy_test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>